# postillon-newstickers-scraper

./: .gitignore  README.md  html_parser.py  main.py  pyproject.toml  run_html_parser.py  run_url_builder_and_url_json_dumper.py  setup.py  url_builder.py  urls.json
html_parser/: html_parser.py
tests/: test_url_builder.py
url_builder/: special_urls.py  url_builder.py
url_json_dumper/: url_json_dumper.py
